1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2010-12-04)
----------------

- Fixed error when used on Plone 4: passing 'From' to secureSend is
  not needed in Plone 3 and breaks in Plone 4.
  [maurits]


0.7 (2008-12-05 Sinterklaas)
----------------------------

- Added Italian localization [paulox]

- Added Owner to role's vocabulary [paulox]

- Add check for empty user email address [fredvd]

- If the localrole is added to a group, add all members of that group to
  the recipients list [Craig Swank]


0.6 (2008-10-02)
----------------

- Fixed and added tests [fredvd]

- Updated locales [fredvd]


0.5 unreleased
--------------

- Add locales [fredvd]

- Fix acquired roles checking & look up email addresses [fredvd]

- Add checking for acquired roles [fredvd]

- Import basic version from a client project [fredvd]